# turbine

./: .gitignore  .gitmodules  .projectile~  CMakeLists.txt  README.md  compile_commands.json
editor/: editor.cpp  editor.hpp
engine/: glad.c  main.cpp
engine/components/: common.hpp
engine/math/: vector2.hpp
engine/platform/: runtime.cpp  runtime.hpp
engine/platform/psp/: callbacks.cpp  callbacks.hpp
engine/renderer/: camera.hpp  framebuffer.hpp  mesh.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  varray.cpp  varray.hpp  vbuffer.hpp
engine/renderer/gu/: gu.cpp  gu.hpp
engine/renderer/opengl/: framebuffer.hpp  gl.cpp  gl.hpp  varray.cpp  varray.hpp  vbuffer.cpp  vbuffer.hpp
engine/scene/: entity.cpp  entity.hpp  scene.cpp  scene.hpp  scene_tools.cpp  scene_tools.hpp
engine/systems/: camera_system.cpp  camera_system.hpp  collision_system.cpp  collision_system.hpp  sprite_system.cpp  sprite_system.hpp
